[package]
name = "dracoon-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
config = "0.14.0"
dco3 = "0.6.1"
dialoguer = "0.11.0"
lazy_static = "1.4.0"
process_path = "0.1.4"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
